--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -17,8 +17,8 @@
 
     {{ form.errors }}
 
-    <section id="reg_form">
-        <h3>Register</h3>
+    <section class="reg_form">
+        <h3 class="acc_form_heading">Register</h3>
         <!-- enctype encrypts image file to be stored in database -->
             <form action="" method="POST" enctype="multipart/form-data">
                 <!-- csrf is cross site request forgery tag.  Make sure form submission comes from
