--- a/collection/templates/collection/collection.html
+++ b/collection/templates/collection/collection.html
@@ -20,7 +20,7 @@
             <div class="row">
             {# Collection heading #}
             <div class="col-lg-12">
-                <h1 class="page-header">{{ collection.name }} Collection</h1>
+                <h1 class="page-header page-header-h1">{{ collection.name }} Collection</h1>
                 <h3 class="page-header">Gallery View</h3>
             </div>
 
@@ -103,7 +103,7 @@
 
         <!-- Reveals Embed Code-->
         <aside class="embed_code_btn_pos">
-              <button class="embed_code_btn btn_small btn-default">Get Embed Code</button>
+              <button class="embed_code_btn btn_small">Get Embed Code</button>
         </aside>
         <!-- Embed Code in input text field-->
         <div class="iframe-wrapper embed_code_field">
