--- a/collection/templates/collection/collections.html
+++ b/collection/templates/collection/collections.html
@@ -21,7 +21,7 @@
 
                 {# Collections Gallery heading #}
                 <div class="col-lg-12">
-                    <h1 class="page-header">{{ request.user }}'s Collections</h1>
+                    <h1 class="page-header page-header-h1">{{ request.user }}'s Collections</h1>
                     <h3 class="page-header">Gallery View</h3>
                 </div>
 
