--- a/collection/templates/collection/collections_public.html
+++ b/collection/templates/collection/collections_public.html
@@ -20,7 +20,7 @@
             <div class="row">
                 {# Collection heading #}
                 <div class="col-lg-12">
-                    <h1 class="page-header">Public Collections</h1>
+                    <h1 class="page-header page-header-h1">Public Collections</h1>
                     <h3 class="page-header">Gallery View</h3>
                 </div>
 
