--- a/collection/templates/collection/collectible_form.html
+++ b/collection/templates/collection/collectible_form.html
@@ -14,7 +14,7 @@
 
 {% block content %}
     <section class="coll_form">
-        <h3 class="coll_form_heading">Enter a New Collectible</h3>
+        <h3 class="coll_form_heading">New Collectible</h3>
         <!-- enctype encrypts image file to be stored in database -->
         <form action="" method="POST" enctype="multipart/form-data">
             <!-- csrf is cross site request forgery tag.  Make sure form submission comes from
