--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -13,6 +13,11 @@
     align-items: center;
 }
 
+.coll_form form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .coll_form_heading {
     border-bottom: 4px solid black;
@@ -20,6 +25,10 @@
     padding: 0 15px;
 }
 
+.add_symbol_container {
+    margin-bottom: 20px;
+    cursor: pointer;
+}
 
 /*--------------------
    Collectible Form
@@ -93,6 +102,8 @@
     display: flex;
     justify-content: center;
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
 }
 
 .coll_img img {
@@ -179,7 +190,6 @@
     margin: 0 0 10% 0;
 }
 
-
 #edit_btn, #addnew_btn, #view_coll_btn {
     color: #fff;
 }
@@ -252,6 +262,8 @@
     max-width: 275px;
     height: 150px;
     border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
     margin-top: 35px;
 }
 
@@ -299,6 +311,8 @@
     width: auto;
     height: auto;
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
     box-shadow: 1px 0 2px grey;
 }
 
