--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -4,7 +4,7 @@
 {% load static %}
 
 {%  block title %}
-    <title>User Profile (Shelfio)</title>
+    <title>User Profile</title>
 {% endblock %}
 
 
@@ -35,7 +35,7 @@
 
             <!-- CHANGE PASSWORD FORM -->
         <h3>Update Password</h3>
-            <form action="" method="POST" enctype="multipart/form-data">
+            <form action="{% url 'accounts:change_password' %}" method="POST">
                 <!-- csrf is cross site request forgery tag.  Make sure form submission comes from
                  a form on the actual website.  Makes sure a cookie is set on your browser -->
                 {% csrf_token %}
