--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -17,12 +17,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 5%;
 }
 
 .coll_form_heading {
     border-bottom: 4px solid black;
     border-top: 4px solid black;
-    padding: 0 15px;
+    padding: 5px 15px;
 }
 
 .add_symbol_container {
@@ -45,8 +46,8 @@
 
 .alert-success {
     color: #fff;
-    background-color: #E84B00;
-    border-color: #E84B00;
+    background-color: #31b0d5;
+    border-color: #31b0d5;
 }
 
 
