--- a/accounts/static/accounts/css/accounts.css
+++ b/accounts/static/accounts/css/accounts.css
@@ -36,6 +36,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 4%;
+    border: 1px solid black;
+    border-radius: 25px;
+    width: 95%;
 }
 
 .reg_form form {
