--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -11,6 +11,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 4%;
+    border: 1px solid black;
+    border-radius: 25px;
+    width: 95%;
 }
 
 .coll_form form {
