--- a/collection/templates/collection/collection.html
+++ b/collection/templates/collection/collection.html
@@ -101,22 +101,25 @@
         </div> <!-- end .row-->
     </div> <!-- end .container-->
 
-        <!-- Reveals Embed Code-->
-        <aside class="embed_code_btn_pos">
-              <a id="edit_btn" class="save btn_small" href="{% url 'collections:collection_edit' username=request.user collection_slug=collection.slug %}">Edit Collection Details</a>
-        </aside>
+        {% if request.user.is_authenticated %}
+            <!-- Reveals Embed Code-->
+            <aside class="embed_code_btn_pos">
+                  <a id="edit_btn" class="save btn_small" href="{% url 'collections:collection_edit' username=request.user collection_slug=collection.slug %}">Edit Collection Details</a>
+            </aside>
 
-        <!-- Reveals Embed Code-->
-        <aside class="embed_code_btn_pos">
-              <button class="embed_code_btn btn_small">Get Embed Code</button>
-        </aside>
-        <!-- Embed Code in input text field-->
-        <div class="iframe-wrapper embed_code_field">
-        {% autoescape off %}
-            <label>
-               <input id="embed_code_textfield" type="text" value='{{ collection.make_embed }}' >
-            </label>
-        {% endautoescape %}
-        </div>
+            <!-- Reveals Embed Code-->
+            <aside class="embed_code_btn_pos">
+                  <button class="embed_code_btn btn_small">Get Embed Code</button>
+            </aside>
+            <!-- Embed Code in input text field-->
+            <div class="iframe-wrapper embed_code_field">
+                {% autoescape off %}
+                    <label>
+                       <input id="embed_code_textfield" type="text" value='{{ collection.make_embed }}' >
+                    </label>
+                {% endautoescape %}
+            </div>
+        {% endif %}
+
     {% endblock %}
 </section>
