final edits for capstone MVP submission

--- a/templates/about.html
+++ b/templates/about.html
@@ -32,7 +32,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="{% static 'images/staff/Elizabeth.jpg' %}" alt="">
-                <h3>Ari Stockrasee
+                <h3>Aria Stockrasee
                     <br><small>Entitlement Czar</small>
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
